[metadata]
name = generate_md_systems
version = 0.0.1
author = Petter Johansson
author_email = pjohansson@univ-pau.fr
description = Create very simple MD simulation systems
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: Free for non-commercial use
    Operating System :: OS Independent
license_files = LICENSE.md LICENSE-PARITY.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts = src/bin/create_two_phase_system.py

[options.packages.find]
where = src

[options.package_data]
two_phase = include/*.gro
