[metadata]
name = generate_md_systems
version = 0.0.3
author = Petter Johansson
description = Create very simple MD simulation systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pjohansson/generate_md_systems
classifiers =
    Programming Language :: Python :: 3
    License :: Free To Use But Restricted
    Operating System :: OS Independent
license_files = 
    LICENSE.md 

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

scripts = 
    src/bin/cat_gro_files.py
    src/bin/gen_single_phase_shear_system.py
    src/bin/gen_two_phase_system.py
    src/bin/gen_two_phase_shear_system.py
    src/bin/make_LJ_substrate.py

[options.packages.find]
where = src

[options.package_data]
generate_md_systems = two_phase/include/*.gro
